--- a/l10n/ru/LC_MESSAGES/CarMusicSorter.po
+++ b/l10n/ru/LC_MESSAGES/CarMusicSorter.po
@@ -4,23 +4,46 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-04 20:25+MSK\n"
-"PO-Revision-Date: 2021-12-04 20:34+0300\n"
-"Language-Team: \n"
+"Project-Id-Version: CarMusicSorter\n"
+"POT-Creation-Date: 2021-12-05 02:56+0300\n"
+"PO-Revision-Date: 2021-12-05 02:56+0300\n"
+"Last-Translator: Intervision\n"
+"Language-Team: Intervision\n"
+"Language: ru_RU\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: pygettext.py 1.5\n"
 "X-Generator: Poedit 3.0\n"
-"Last-Translator: Intervision\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : 2);\n"
-"Language: ru_RU\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<12 || n%100>14) ? 1 : 2);\n"
+"X-Poedit-Basepath: ../../..\n"
+"X-Poedit-SearchPath-0: .\n"
 
-#: CMS.py:29
+#: CMS.py:31
+msgid "Info"
+msgstr "Справка"
+
+#: CMS.py:34 functions/functions.py:13
+msgid "About"
+msgstr "О программе"
+
+#: CMS.py:39
 msgid "Choose directory where tracks were taken from"
 msgstr "Выберите директорию, из которой будут взяты треки"
 
-#: CMS.py:30
+#: CMS.py:42 functions/functions.py:8
 msgid "Begin!"
 msgstr "Начать!"
+
+#: functions/functions.py:17
+msgid "Version: "
+msgstr "Версия: "
+
+#: functions/functions.py:18
+msgid ""
+"\n"
+"Author: "
+msgstr ""
+"\n"
+"Разработчик: "
